Removed top-level SConscript (it's unused with latest changes.  Use   SConstruct instead) Added SConscript for Tools Moved center-pdb into Tools
svn path=/software/LOOS/trunk/; revision=465

--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -11,11 +11,11 @@ import sys
 
 Import('env')
 
-example_apps = 'coord-example dcd-example pdb-example dcd-example2 dcd-example3 psf-example pdb-parsed'
+apps = 'charge-density center-pdb'
 
 list = []
 
-for name in Split(example_apps):
+for name in Split(apps):
     fname = name + '.cpp'
     prog = env.Program(fname)
     list.append(prog)
