Added non-const access to Atom's GCoord. Added ensemble average structure and iterative superposition. Added some rudimentary test code
svn path=/software/LOOS/trunk/; revision=502

--- a/Tests/SConscript
+++ b/Tests/SConscript
@@ -12,7 +12,7 @@ Import('env')
 
 
 
-test_apps = 'atomic-group-test pdb-test parser-test princ_axes_tst timeseries-test find_perf_test pdb-shift pdb-align'
+test_apps = 'atomic-group-test pdb-test parser-test princ_axes_tst timeseries-test find_perf_test pdb-shift pdb-align italig-test'
 list = []
 
 for name in Split(test_apps):
