--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -11,7 +11,7 @@ import sys
 
 Import('env')
 
-apps = 'charge-density center-pdb pdb2matlab contacts'
+apps = 'charge-density center-pdb pdb2matlab dcdframe2pdb contacts'
 
 list = []
 
