LOOSened order_params.
Note: I haven't even tried to run it, let alone verified that it's not bug 
ridden. 


svn path=/software/LOOS/trunk/; revision=506

--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -11,7 +11,7 @@ import sys
 
 Import('env')
 
-apps = 'charge-density center-pdb pdb2matlab dcdframe2pdb contacts'
+apps = 'charge-density center-pdb pdb2matlab dcdframe2pdb contacts order_params'
 
 list = []
 
