Removed XForm from within AtomicGroup.  To transform a group, you must   now setup an XForm and pass this to one of the transformative   methods. Statistical/manipulative functions now do not rely on the internal   XForm. Renamed parser-test to parser-tests to be more consistent. Updated pdb2matlab and center-pdb to reflect the above changes. Updated tests to reflect the XForm changes.
svn path=/software/LOOS/branches/xform-redux-branch/; revision=527

--- a/Tests/SConscript
+++ b/Tests/SConscript
@@ -12,7 +12,7 @@ Import('env')
 
 
 
-test_apps = 'atomic-group-test parser-test timeseries-test find_perf_test pdb-tests alignment-tests'
+test_apps = 'atomic-group-test parser-tests timeseries-test find_perf_test pdb-tests alignment-tests'
 list = []
 
 for name in Split(test_apps):
