--- a/Tests/SConscript
+++ b/Tests/SConscript
@@ -61,8 +61,8 @@ env.Append(BUILDERS = {'UnitTest' :  bld})
 
 
 non_testable_tests = 'timeseries-test find_perf_test'
-pdb_based_tests = 'pdb-tests alignment-tests'
-solo_tests = 'parser-tests atomic-group-test'
+pdb_based_tests = 'pdb-tests alignment-tests parser-tests'
+solo_tests = 'atomic-group-test'
 
 
 
