--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -11,7 +11,7 @@ import sys
 
 Import('env')
 
-apps = 'density-dist center-pdb pdb2matlab dcdframe2pdb contacts order_params bounding'
+apps = 'density-dist center-pdb pdb2matlab dcdframe2pdb contacts order_params bounding aligner'
 
 list = []
 
