Added class(es) for reading matrices...currently only raw ascii.
Added example code for how to read a matrix.

svn path=/software/LOOS/trunk/; revision=611

--- a/Examples/SConscript
+++ b/Examples/SConscript
@@ -22,7 +22,7 @@ import sys
 
 Import('env')
 
-example_apps = 'coord-example dcd-example pdb-example dcd-example2 dcd-example3 psf-example pdb-parsed pdb-splitter'
+example_apps = 'coord-example dcd-example pdb-example dcd-example2 dcd-example3 psf-example pdb-parsed pdb-splitter matstat'
 
 list = []
 
