--- a/Tests/SConscript
+++ b/Tests/SConscript
@@ -101,7 +101,7 @@ env.Append(BUILDERS = {'UnitTest' :  bld})
 
 
 non_testable_tests = 'timeseries-test find_perf_test'
-pdb_based_tests = 'pdb-tests alignment-tests parser-tests'
+pdb_based_tests = 'pdb-tests alignment-tests parser-tests pdb-echo'
 solo_tests = 'principal-axes-tests atomic-group-test timeseries-test'
 
 
