Added pdbtraj to loos.hpp
Discovered namespace conflict in Tools/svd with internal align and
boost::align { }.  I don't see any info on boost::align nor am I sure
why it's cropping up now.  To be safe though, I've removed the "using
namespace boost" statements in a couple of header files and switched
to explicitly using boost::.  This is probably a better thing to do
(or only have the using statement inside the .cpp, not the .hpp)
anyway...


svn path=/software/LOOS/branches/traj-devel/; revision=869

--- a/Tests/SConscript
+++ b/Tests/SConscript
@@ -100,7 +100,7 @@ env.Append(BUILDERS = {'UnitTest' :  bld})
 ### Ok, you can open 'em now...
 
 
-non_testable_tests = 'timeseries-test find_perf_test ccpdb_test'
+non_testable_tests = 'timeseries-test find_perf_test ccpdb_test pdbtraj_test'
 pdb_based_tests = 'pdb-tests alignment-tests parser-tests pdb-echo'
 tinker_tests = 'tinkerxyz-tests'
 solo_tests = 'principal-axes-tests atomic-group-test timeseries-test'
