--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -26,6 +26,7 @@ Import('env')
 
 apps = 'density-dist density-dist-windowed center-pdb pdb2matlab dcdframe2pdb contacts order_params bounding aligner svd rmsds xy_rdf xy_rdf_timeseries model-select rdf atomic-rdf crossing-waters'
 apps = apps + ' svdcolmap averager amber2pdb amber2dcd reimage-by-molecule rmsd2ref rgyr dumpmol helix_kink subsetter'
+apps = apps + ' dcdinfo'
 
 list = []
 
