--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -24,7 +24,7 @@ import sys
 
 Import('env')
 
-apps = 'density-dist density-dist-windowed center-pdb pdb2matlab dcdframe2pdb contacts order_params bounding aligner svd rmsds xy_rdf xy_rdf_timeseries model-select rdf atomic-rdf crossing-waters'
+apps = 'density-dist density-dist-windowed center-pdb pdb2matlab frame2pdb contacts order_params bounding aligner svd rmsds xy_rdf xy_rdf_timeseries model-select rdf atomic-rdf crossing-waters'
 apps = apps + ' svdcolmap averager convert2pdb traj2dcd reimage-by-molecule rmsd2ref rgyr dumpmol helix_kink subsetter torsion'
 apps = apps + ' dcdinfo'
 
