Added tool to concatenate atoms together from a trajectory into a single PDB
svn path=/software/LOOS/trunk/; revision=1657

--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -26,7 +26,7 @@ Import('env')
 
 apps = 'density-dist density-dist-windowed center-pdb model2matlab frame2pdb contacts order_params bounding aligner svd rmsds xy_rdf xy_rdf_timeseries model-select rdf atomic-rdf crossing-waters'
 apps = apps + ' svdcolmap averager convert2pdb traj2dcd reimage-by-molecule rmsd2ref rgyr dumpmol helix_kink subsetter torsion'
-apps = apps + ' dcdinfo recenter-trj'
+apps = apps + ' dcdinfo recenter-trj concat-selection'
 
 list = []
 
