--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -24,6 +24,9 @@ import sys
 
 Import('env')
 
+clone = env.Clone()
+clone.Append(LIBS = ['loos'])
+
 apps = 'density-dist density-dist-windowed center-pdb model2matlab frame2pdb contacts order_params bounding aligner svd rmsds xy_rdf xy_rdf_timeseries model-select rdf atomic-rdf crossing-waters'
 apps = apps + ' svdcolmap averager convert2pdb traj2dcd reimage-by-molecule rmsd2ref rgyr dumpmol helix_kink subsetter torsion'
 apps = apps + ' dcdinfo recenter-trj concat-selection trajinfo'
@@ -32,7 +35,12 @@ list = []
 
 for name in Split(apps):
     fname = name + '.cpp'
-    prog = env.Program(fname)
+    prog = clone.Program(fname)
     list.append(prog)
+
+PREFIX = env['PREFIX']
+
+loos_tools = env.Install(PREFIX + '/bin', Split(apps))
+env.Alias('tools_install', loos_tools)
 
 Return('list')
